add run config doc